cmake_minimum_required(VERSION 3.10.0)
project(app)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(APP_NAME test)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/output)
file(GLOB_RECURSE SOURCES_FILES ${CMAKE_CURRENT_SOURCE_DIR}/module/**.cpp)
file(GLOB_RECURSE HEAD_FILES 
    ${CMAKE_CURRENT_SOURCE_DIR}/module/**.h
    ${CMAKE_CURRENT_SOURCE_DIR}/module/**.hpp
)
set(HEADER_DIRS "")
foreach(HEADER_FILE ${HEAD_FILES})
    get_filename_component(HEADER_DIR ${HEADER_FILE} DIRECTORY)
    list(APPEND HEADER_DIRS ${HEADER_DIR})
endforeach()
list(REMOVE_DUPLICATES HEADER_DIRS)
add_executable(${APP_NAME} ${SOURCES_FILES})
target_include_directories(${APP_NAME} PRIVATE ${HEADER_DIRS})
target_link_libraries(${APP_NAME} PRIVATE pthread)