cmake_minimum_required(VERSION 3.0.0)
project(sql_test)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(HEAD_PATH ${CMAKE_CURRENT_SOURCE_DIR}/module/ynhsql/ "/usr/include")
message(STATUS "HEAD_PATH : ${HEAD_PATH}")
set(APP sql_app)
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/module/ynhsql/ynhsql.cpp ${CMAKE_CURRENT_SOURCE_DIR}/module/src/main.cpp)
message(STATUS "SOURCES : ${SOURCES}")
include_directories(${HEAD_PATH})
link_directories("/usr/lib/x86_64-linux-gnu/")
add_executable(${APP} ${SOURCES})
target_link_libraries(${APP} mysqlclient)