cmake_minimum_required(VERSION 3.0.0)
project(demo)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/output)
set(target_name app)
file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/module/src/*.cpp)
add_executable(${target_name} ${SOURCE_FILES})
target_link_directories(${target_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/module/Person/lib)
target_include_directories(${target_name} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/module/Person/include)
target_link_libraries(${target_name} PRIVATE person)