cmake_minimum_required(VERSION 3.0)
project(LOGGER_LIB)
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
file(GLOB_RECURSE HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
set(LIBRARY_OUTPUT_PATH ${LIB_PATH})
add_library(${LOGGER_LIB_STATIC} STATIC ${SOURCES})
add_library(${LOGGER_LIB_SHARED} SHARED ${SOURCES})
