cmake_minimum_required(VERSION 3.0)
project(APP)
file(GLOB_RECURSE SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
include_directories(${HEAD_PATH})
message(STATUS "HEAD_PATH : ${HEAD_PATH}")
set(EXECUTABLE_OUTPUT_PATH ${EXEC_PATH})
link_directories(${LIB_PATH})
add_executable(${APP} ${SOURCES})
target_link_libraries(${APP} ${LOGGER_LIB_SHARED})
