cmake_minimum_required(VERSION 3.0.0)
project(Person)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)
set(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
set(PERSON_LIB_STATIC person_static)
set(PERSON_LIB_SHARED person)
file(GLOB_RECURSE SOURCE_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
add_library(${PERSON_LIB_STATIC} STATIC ${SOURCE_FILES})
add_library(${PERSON_LIB_SHARED} SHARED ${SOURCE_FILES})
target_include_directories(${PERSON_LIB_STATIC} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)
target_include_directories(${PERSON_LIB_SHARED} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include/)